--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-importlib-resources = "5.10.0"
+importlib-resources = "==5.10.0"
 ipdb = "0.13.9"
 pytest="7.1.3"
 
